# masters-thesis

./: .gitignore  .nojekyll  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  fit-body.js  fit-text.js  presentation.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.trunk/: trunk.yaml
configs/: evaluate.yml  evaluate_thesis.yml  experiments.yaml  thesis_experiments.yaml
docs/: README.md  adversarial-opponent-model.md  experimental-campaign-summary.md  final-experimental-results.md  michie-1969-challenge.md  von-neumann-minimax-theorem.md
examples/: README.md  active_inference_demo.rs  efe_micro.rs  free_energy_component_analysis.rs  free_energy_convergence.rs  free_energy_demo.rs  free_energy_perfect_vs_perfect.rs  symmetry_demo.rs
presentation/: .gitignore  Makefile  _quarto.yml  presentation.qmd  theme.scss
resources/: README.md  double_threat_positions.txt  two-armed-bandit-problem.md
scripts/: README.md
slides/: 01-menace-machine.html  02-bayesian-connection.html  03-free-energy-principle.html  04-menace-as-fep.html  05-empirical-results.html  06-answering-michies-question.html  appendix-01-donald-michie.html  appendix-02-mathematical-details.html
src/: active_inference.rs  beliefs.rs  efe.rs  error.rs  identifiers.rs  lib.rs  menace.rs  tictactoe.rs  types.rs  utils.rs  workspace.rs
tests/: active_inference_minimax.rs  active_inference_outcome_bug.rs  active_inference_prefs.rs  ambiguity_computation.rs  ambiguity_weight_validation.rs  common.rs  di_container_integration.rs  double_threat_golden.rs  exact_count_validation.rs  (+11 more)
(+136 files in other folders)
