[package]
name = "menace"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
indicatif = "0.18"
num-traits = "0.2"
rand = "0.9"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18"
thiserror = "2.0"

[dev-dependencies]
# External dependencies
criterion = "0.7"
plotters = "0.3"
pretty_assertions = "1.4"
proptest = "1.8"
tempfile = "3.23"
rand_distr = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
